Keep zone audits aligned with saved state
Preserve zone rollback semantics, sanitize audit metadata, and surface provider failures without blocking gameplay.